2015-06-15  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Take another tar of ./pg_tblspc by
	  keeping the symlink.

2015-06-10  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: On recovery, set initial window to (0, -1)
	* installcheck/Installcheck/Mock.pm: Set verbose to YES

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/ndmp-device.c: Set initial window correctly on recovery

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amssl.pl: SSL_VERIFY_NONE is not defined on older
	  IO::Socket::SSL

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.h (struct tcp_conn): Remove meth.
	* common-src/ssl-security.c: Do not use temporary variable for the
	  method.

2015-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: s/check_auth/check_host_setting/g, check
	  maxdumps is the same for all DLEs of a host
	* common-src/ammessage.c: Add message 2800232

2015-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/krb5-security.c (krb5_tcpm_recv_token): Remove the fd
	  argument.

2015-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	* man/Makefile.am: Typo.

2015-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	Add ssl auth.
	* config/amanda/amanda_configure.m4: Load AMANDA_SSL_SECURITY
	* config/amanda/ssl-security.m4 (AMANDA_SSL_SECURITY): Add
	  --with-ssl-security
	* amandad-src/amandad.c: Add code to support ssl auth,
	* common-src/Makefile.am (libamanda_la_SOURCES): Add ssl-security.c
	* common-src/Makefile.am (sbin_SCRIPTS_PERL): Add amssl
	* common-src/amgetconf.pl: Remove useless space
	* common-src/amssl.pl: New amssl program
	* common-src/conffile.c: Add CONF_SSL_FINGERPRINT_FILE,
	  CONF_SSL_CERT_FILE, CONF_SSL_KEY_FILE, CONF_SSL_CA_CERT_FILE,
	  CONF_SSL_CIPHER_LIST, CONF_SSL_CHECK_HOST,
	  CONF_SSL_CHECK_CERTIFICATE_HOST, CONF_SSL_CHECK_FINGERPRINT and
	  CONF_SSL_DIR