@@ -1,3 +1,7 @@
+2015-06-16  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer/robot.pm (verify_unlocked): Reload the state and
+	  use eject_unload
+
 2015-06-15  Jean-Louis Martineau <martineau@zmanda.com>
 	* application-src/ampgsql.pl: Take another tar of ./pg_tblspc by
 	  keeping the symlink.
